# dbt_template

./: README.md  pyproject.toml
project_template/: dbt_project.yml
project_template/macros/: override_default_macros.sql
project_template/macros/tests/: test_resolution.sql
project_template/macros/utils/: anonymizator.sql  drop_schema.sql  schema.yml
project_template/models/anonymize/: my_first_dbt_model_anonymize.sql  schema.yml
project_template/models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
project_template/tooling/: Dockerfile  cdbt
tooling/: profiles.yml
